--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 :root {
     --blue: #0a121b;
-    --teal: #76FAC7;
-    --lightteal: #C8FDE8;
+    --teal: #8885EF;
+    --lightteal: #F3EFFB;
     --purple: #403D56;
     --gradient: linear-gradient(90deg, var(--lightteal), var(--teal));
 }
@@ -39,15 +39,14 @@ section {
     background: var(--gradient);
     color: var(--blue);
     font-size: 1.5rem;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.15);
     cursor: pointer;
     transition: all .5s ease;
 }
 
 .btn:hover {
-    color: #fff;
-    background: linear-gradient(90deg, rgb(112, 112, 112), var(--purple));
-    box-shadow: none;  
+    background: linear-gradient(250deg, var(--teal), var(--lightteal));
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.15);
+    letter-spacing: 1px;
 }
 
 .section-title {
@@ -67,7 +66,7 @@ section {
     right: 30px;
     bottom: 0;
     font-size: 5rem;
-    color: var(--purple);
+    color: var(--teal);
     cursor: pointer;
     z-index: 1000;
 }
@@ -242,15 +241,15 @@ header {
 
 .about .image {
    flex: 1 1 40rem;
-   padding: 5rem;
+   padding: 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
+   margin-right: 4rem;
 }
 
 .about .image img {
     width: 100%;
-    animation: glow 5s linear infinite;
 }
 
 .about .content {
@@ -369,7 +368,7 @@ header {
 }
 
 .newsletter input[type="submit"]:hover {
-    background: var(--purple);
+    background: var(--teal);
     color: #fff;
 }
 /* end newsletter */
@@ -763,6 +762,9 @@ footer {
     .about .container{
         flex-direction: column;
         text-align: center;
+    }
+    .about .image {
+        margin-right: 0;
     }
     .newsletter p {
         width: 100%;
